--- a/Domashno_2/guessable-flutter-client/guessable/pubspec.yaml
+++ b/Domashno_2/guessable-flutter-client/guessable/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   geolocator: ^9.0.2
+  shared_preferences: ^2.0.17
+  http: ^0.13.5
+  flutter_bloc: ^8.1.2
 
 dev_dependencies:
   flutter_test:
