--- a/Domashno_2/guessable-flutter-client/guessable/pubspec.yaml
+++ b/Domashno_2/guessable-flutter-client/guessable/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   shared_preferences: ^2.0.17
   http: ^0.13.5
   flutter_bloc: ^8.1.2
+  camera: ^0.10.3+2
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
