--- a/Domashno_2/guessable-flutter-client/guessable/pubspec.yaml
+++ b/Domashno_2/guessable-flutter-client/guessable/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   camera: ^0.10.3+2
   equatable: ^2.0.5
+  http_interceptor: ^1.0.1
 
 dev_dependencies:
   flutter_test:
