--- a/Domashno_2/guessable-flutter-client/guessable/pubspec.yaml
+++ b/Domashno_2/guessable-flutter-client/guessable/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   camera: ^0.10.3+2
   equatable: ^2.0.5
   http_interceptor: ^1.0.1
+  google_maps_flutter: ^2.2.4
 
 dev_dependencies:
   flutter_test:
